--- a/src-lookup/main/default/lwc/lookup/lookup.html
+++ b/src-lookup/main/default/lwc/lookup/lookup.html
@@ -1,253 +1,24 @@
 <template>
-  <label lwc:if={label} class={computedLabelClass} for="combobox">
-    <abbr lwc:if={required} title="required" class="slds-required">*</abbr>
-    {label}
-    <lightning-helptext
-      lwc:if={fieldLevelText}
-      content={fieldLevelText}
-    ></lightning-helptext>
-  </label>
-  <div class="slds-form-element__control">
-    <div class={getContainerClass}>
-      <div
-        class={getDropdownClass}
-        aria-expanded={isListboxOpen}
-        aria-haspopup="listbox"
-        aria-owns="listbox"
-        role="combobox"
-      >
-        <!-- Search input start -->
-        <div class={getComboboxClass} role="none">
-          <lightning-icon
-            lwc:if={isSingleEntry}
-            icon-name={getSelectIconName}
-            size="small"
-            class={getSelectIconClass}
-          >
-          </lightning-icon>
-
-          <!-- Text input -->
-          <input
-            type="text"
-            class={getInputClass}
-            aria-autocomplete="list"
-            aria-controls="listbox"
-            aria-activedescendant={_focusedResultIndex}
-            autocomplete="off"
-            role="textbox"
-            id="combobox"
-            placeholder={placeholder}
-            value={getInputValue}
-            title={getInputTitle}
-            readonly={isInputReadonly}
-            disabled={disabled}
-            onfocus={handleFocus}
-            onblur={handleBlur}
-            oninput={handleInput}
-            onkeydown={handleKeyDown}
-          />
-
-          <!-- Search icon -->
-          <lightning-icon
-            icon-name="utility:search"
-            size="x-small"
-            alternative-text="Search icon"
-            class={getSearchIconClass}
-          ></lightning-icon>
-
-          <!-- Clear selection button icon for single entry lookups -->
-          <template lwc:if={isSingleEntry}>
-            <button
-              title="Remove selected option"
-              type="button"
-              onclick={handleClearSelection}
-              class={getClearSelectionButtonClass}
-              disabled={disabled}
-            >
-              <lightning-icon
-                icon-name="utility:close"
-                size="x-small"
-                alternative-text="Remove selected option"
-                class="slds-button__icon"
-              ></lightning-icon>
-            </button>
-          </template>
-        </div>
-        <!-- Search input end -->
-
-        <!-- Result list box start -->
-        <div
-          id="listbox"
-          role="listbox"
-          aria-label={label}
-          onmousedown={handleComboboxMouseDown}
-          onmouseup={handleComboboxMouseUp}
-          class={getListboxClass}
-        >
-          <ul class="slds-listbox slds-listbox_vertical" role="presentation">
-            <!-- Spinner to display when waiting for results of search -->
-            <div lwc:if={loading}>
-              <lightning-spinner
-                alternative-text="Loading"
-                size="small"
-              ></lightning-spinner>
-            </div>
-
-            <!-- Result list start -->
-            <template
-              for:each={searchResultsLocalState}
-              for:item="item"
-              for:index="index"
-              lwc:if={hasResults}
-            >
-              <li
-                key={item.result.id}
-                role="presentation"
-                class="slds-listbox__item"
-              >
-                <div
-                  class={item.classes}
-                  role="option"
-                  id={index}
-                  aria-label={item.result.title}
-                  onclick={handleResultClick}
-                  data-recordid={item.result.id}
-                >
-                  <span class="slds-media__figure slds-listbox__option-icon">
-                    <lightning-icon
-                      size="small"
-                      icon-name="standard:default"
-                      lwc:spread={item.result.icon}
-                    ></lightning-icon>
-                  </span>
-                  <span class="slds-media__body">
-                    <span
-                      class="slds-listbox__option-text slds-listbox__option-text_entity"
-                    >
-                      <lightning-formatted-rich-text
-                        value={item.result.titleFormatted}
-                        disable-linkify
-                      ></lightning-formatted-rich-text>
-                    </span>
-                    <template
-                      for:each={item.result.subtitlesFormatted}
-                      for:item="subtitle"
-                      lwc:if={item.result.hasSubtitles}
-                    >
-                      <p
-                        lwc:if={subtitle.value}
-                        key={subtitle.index}
-                        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
-                      >
-                        <lightning-formatted-rich-text
-                          value={subtitle.label}
-                          disable-linkify
-                        ></lightning-formatted-rich-text>
-                        <span>: </span>
-                        <c-lookup-value-formatter
-                          type-attributes={subtitle.typeAttributes}
-                          type={subtitle.type}
-                          value={subtitle.value}
-                        ></c-lookup-value-formatter>
-                      </p>
-                    </template>
-                  </span>
-                </div>
-              </li>
-            </template>
-            <!-- Result list end -->
-
-            <!-- No results start -->
-            <template lwc:else>
-              <li role="presentation">
-                <span
-                  class="slds-media slds-listbox__option_entity"
-                  role="option"
-                >
-                  <span lwc:if={loading} class="slds-media__body"
-                    >Loading...</span
-                  >
-                  <span lwc:else class="slds-media__body">No results.</span>
-                </span>
-              </li>
-            </template>
-            <!-- No results end -->
-
-            <!-- Create new records -->
-            <template for:each={actions} for:item="action">
-              <li
-                key={action.name}
-                role="presentation"
-                class="slds-listbox__item"
-              >
-                <div
-                  class="slds-media slds-media_center slds-listbox__option slds-listbox__option_entity"
-                  onclick={handleActionClick}
-                  data-name={action.name}
-                  role="option"
-                >
-                  <span class="slds-media__figure slds-listbox__option-icon">
-                    <lightning-icon
-                      size="small"
-                      icon-name= "utility:add"
-                      lwc:spread={action.icon}
-                    ></lightning-icon>
-                  </span>
-                  <span class="slds-media__body">
-                    <span class="slds-listbox__option-text"
-                      >{action.label}</span
-                    >
-                  </span>
-                </div>
-              </li>
-            </template>
-            <!-- Create new records end -->
-          </ul>
-        </div>
-        <!-- Result list box end -->
-      </div>
-    </div>
-
-    <!-- Multi-selection start -->
-    <template lwc:if={isMultiEntry}>
-      <div
-        id="selection"
-        role="listbox"
-        aria-label={label}
-        aria-orientation="horizontal"
-      >
-        <ul
-          class="slds-listbox slds-listbox_inline slds-var-p-top_xxx-small"
-          role="group"
-          aria-label="Selected options"
-        >
-          <template for:each={value} for:item="item">
-            <li key={item.id} role="presentation">
-              <lightning-pill
-                label={item.title}
-                title={item.title}
-                onremove={handleRemoveSelectedItem}
-                name={item.id}
-              >
-                <lightning-icon lwc:spread={item.icon}></lightning-icon>
-              </lightning-pill>
-            </li>
-          </template>
-        </ul>
-      </div>
-    </template>
-    <!-- Multi-selection end -->
-  </div>
-  <!-- Help Message start -->
-  <template if:true={displayHelpMessage}>
-    <div
-      id="field-level-text"
-      data-field-level-text
-      class="slds-form-element__help"
-      aria-live="assertive"
-    >
-      {_helpMessage}
-    </div>
-  </template>
-  <!-- Help Message end -->
+  <c-base-lookup
+    lwc:ref="baseLookup"
+    actions={actions}
+    default-search-results={_defaultSearchResults}
+    disabled={disabled}
+    field-level-text={fieldLevelText}
+    is-multi-entry={isMultiEntry}
+    label={label}
+    message-when-value-missing={messageWhenValueMissing}
+    min-search-term-length={minSearchTermLength}
+    onaction={handleAction}
+    onblur={handleBlur}
+    onchange={handleChange}
+    onfocus={handleFocus}
+    onsearch={handleSearch}
+    placeholder={placeholder}
+    required={required}
+    scroll-after-n-items={scrollAfterNItems}
+    search-results={_searchResults}
+    value={_value}
+    variant={variant}
+  ></c-base-lookup>
 </template>
