change name from typeAttributes to props

--- a/src-lookup/main/default/lwc/baseLookup/baseLookup.html
+++ b/src-lookup/main/default/lwc/baseLookup/baseLookup.html
@@ -143,11 +143,18 @@
                           disable-linkify
                         ></lightning-formatted-rich-text>
                         <span>: </span>
-                        <c-lookup-value-formatter
-                          type-attributes={subtitle.typeAttributes}
+                        <lightning-icon
+                          lwc:if={subtitle.isLightningIcon}
+                          icon-name="utility:check"
+                          size="xx-small"
+                          lwc:spread={props}
+                        ></lightning-icon>
+                        <c-lightning-formatted-dynamic-output
+                          lwc:else
                           type={subtitle.type}
                           value={subtitle.value}
-                        ></c-lookup-value-formatter>
+                          props={subtitle.props}
+                        ></c-lightning-formatted-dynamic-output>
                       </p>
                     </template>
                   </span>
@@ -188,7 +195,7 @@
                   <span class="slds-media__figure slds-listbox__option-icon">
                     <lightning-icon
                       size="small"
-                      icon-name= "utility:add"
+                      icon-name="utility:add"
                       lwc:spread={action.icon}
                     ></lightning-icon>
                   </span>
