Add Codecov integration for apex (#6)
* Add Codecov integration for apex

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

* --amend

--- a/src-lookup/main/default/lwc/lookup/lookup.html
+++ b/src-lookup/main/default/lwc/lookup/lookup.html
@@ -10,6 +10,7 @@
     message-when-value-missing={messageWhenValueMissing}
     min-search-term-length={minSearchTermLength}
     onaction={handleAction}
+    oninvalid={handleInvalid}
     onblur={handleBlur}
     onchange={handleChange}
     onfocus={handleFocus}
