--- a/src-lookup-sample/main/default/lwc/lookupSample/lookupSample.html
+++ b/src-lookup-sample/main/default/lwc/lookupSample/lookupSample.html
@@ -1,57 +1,63 @@
 <template>
-  <lightning-card
-    title="c-sobject-lookup (SObject Lookup Lightning Web Component)"
-  >
-    <div class="slds-form slds-form_stacked slds-var-m-around_xx-large">
-      <div class="slds-grid slds-gutters">
-        <div class="slds-col">
-          <lightning-input
-            type="toggle"
-            label="Mutli entry lookup"
-            checked={isMultiEntry}
-            onchange={handleLookupTypeChange}
-          ></lightning-input>
-        </div>
-        <div class="slds-col" lwc:if={isMultiEntry}>
-          <lightning-input
-            type="number"
-            label="Max selected items"
-            min="1"
-            value={maxSelectionSize}
-            onchange={handleMaxSelectionSizeChange}
+  <lightning-tabset variant="scoped">
+    <lightning-tab label='Lookup One'>
+      <lightning-card
+        title="c-sobject-lookup (SObject Lookup Lightning Web Component)"
+      >
+        <div class="slds-form slds-form_stacked slds-var-m-around_xx-large">
+          <div class="slds-grid slds-gutters">
+            <div class="slds-col">
+              <lightning-input
+                type="toggle"
+                label="Mutli entry lookup"
+                checked={isMultiEntry}
+                onchange={handleLookupTypeChange}
+              ></lightning-input>
+            </div>
+            <div class="slds-col" lwc:if={isMultiEntry}>
+              <lightning-input
+                type="number"
+                label="Max selected items"
+                min="1"
+                value={maxSelectionSize}
+                onchange={handleMaxSelectionSizeChange}
+                required
+              ></lightning-input>
+            </div>
+          </div>
+
+          <p class="slds-var-m-vertical_large">
+            <strong>Note:</strong> new record creation options only work in
+            Lightning Experience.
+          </p>
+          <c-lookup
+            lwc:ref="lookup"
+            unique-id="Account_Lookup"
+            actions={actions}
+            is-multi-entry={isMultiEntry}
+            label="SObject Search"
+            onaction={handleAction}
+            onchange={handleChange}
             required
-          ></lightning-input>
+            value={value}
+            payload={payload}
+          ></c-lookup>
+
+          <div class="slds-var-m-top_large">
+            <lightning-button label="Focus" onclick={handleFocus}></lightning-button
+            >&nbsp;
+            <lightning-button label="Clear" onclick={handleClear}></lightning-button
+            >&nbsp;
+            <lightning-button
+              variant="brand"
+              label="Submit"
+              onclick={handleSubmit}
+            ></lightning-button>
+          </div>
         </div>
-      </div>
-
-      <p class="slds-var-m-vertical_large">
-        <strong>Note:</strong> new record creation options only work in
-        Lightning Experience.
-      </p>
-      <c-lookup
-        lwc:ref="lookup"
-        unique-id="Account_Lookup"
-        actions={actions}
-        is-multi-entry={isMultiEntry}
-        label="SObject Search"
-        onaction={handleAction}
-        onchange={handleChange}
-        required
-        value={value}
-        payload={payload}
-      ></c-lookup>
-
-      <div class="slds-var-m-top_large">
-        <lightning-button label="Focus" onclick={handleFocus}></lightning-button
-        >&nbsp;
-        <lightning-button label="Clear" onclick={handleClear}></lightning-button
-        >&nbsp;
-        <lightning-button
-          variant="brand"
-          label="Submit"
-          onclick={handleSubmit}
-        ></lightning-button>
-      </div>
-    </div>
-  </lightning-card>
+      </lightning-card>
+    </lightning-tab>
+    <lightning-tab label='Lookup two'></lightning-tab>
+    <lightning-tab label='Lookup three'></lightning-tab>
+  </lightning-tabset>
 </template>
